<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0"
         xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
    <modelVersion>4.0.0</modelVersion>
    <parent>
        <groupId>com.progressive.minds</groupId>
        <artifactId>chimera</artifactId>
        <version>1.0-SNAPSHOT</version>
    </parent>

    <artifactId>chimera-nexus</artifactId>
    <packaging>pom</packaging>
    <modules>
        <module>chimera-api-nexus-nfr</module>
        <module>chimera-api-nexus-web</module>
        <module>chimera-api-nexus-security</module>
        <module>chimera-api-nexus-swagger-docs</module>
        <module>chimera-api-nexus-db</module>
        <module>chimera-api-nexus-examples</module>
    </modules>

    <properties>
        <maven.compiler.source>17</maven.compiler.source>
        <maven.compiler.target>17</maven.compiler.target>
        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
        <spring-boot.version>3.4.3</spring-boot.version>
        <spring-cloud.version>2024.0.0</spring-cloud.version>

        <springdoc-openapi-starter-webmvc-ui.version>2.8.4</springdoc-openapi-starter-webmvc-ui.version>

        <keycloak-admin-client.version>26.0.4</keycloak-admin-client.version>
        <org.mybatis.spring.boot.version>3.0.4</org.mybatis.spring.boot.version>
        <org.mybatis.dynamic-sql.version>1.5.2</org.mybatis.dynamic-sql.version>
        <flyway.version>11.3.2</flyway.version>
        <mybatis-generator-core.version>1.4.2</mybatis-generator-core.version>
    </properties>

    <dependencyManagement>
        <dependencies>
            <!-- Spring Boot BOM -->
            <dependency>
                <groupId>org.springframework.boot</groupId>
                <artifactId>spring-boot-dependencies</artifactId>
                <version>${spring-boot.version}</version>
                <type>pom</type>
                <scope>import</scope>
            </dependency>
            <!-- Spring Cloud Dependencies BOM -->
            <dependency>
                <groupId>org.springframework.cloud</groupId>
                <artifactId>spring-cloud-dependencies</artifactId>
                <version>${spring-cloud.version}</version>
                <type>pom</type>
                <scope>import</scope>
            </dependency>

            <dependency>
                <groupId>org.springframework.boot</groupId>
                <artifactId>spring-boot-starter</artifactId>
                <version>${spring-boot.version}</version>
            </dependency>

            <!-- Other Dependencies -->
            <dependency>
                <groupId>org.springdoc</groupId>
                <artifactId>springdoc-openapi-starter-webmvc-ui</artifactId>
                <version>${springdoc-openapi-starter-webmvc-ui.version}</version>
            </dependency>

            <dependency>
                <groupId>org.springdoc</groupId>
                <artifactId>springdoc-openapi-starter-webmvc-api</artifactId>
                <version>${springdoc-openapi-starter-webmvc-ui.version}</version>
            </dependency>

            <dependency>
                <groupId>org.flywaydb</groupId>
                <artifactId>flyway-core</artifactId>
                <version>${flyway.version}</version>
            </dependency>
            <!-- MyBatis Spring Boot Starter (MyBatis integration with Spring Boot) -->
            <dependency>
                <artifactId>mybatis-spring-boot-starter</artifactId>
                <groupId>org.mybatis.spring.boot</groupId>
                <version>${org.mybatis.spring.boot.version}</version>
            </dependency>
            <dependency>
                <artifactId>mybatis-dynamic-sql</artifactId>
                <groupId>org.mybatis.dynamic-sql</groupId>
                <version>${org.mybatis.dynamic-sql.version}</version>
            </dependency>
            <dependency>
                <groupId>org.keycloak</groupId>
                <artifactId>keycloak-admin-client</artifactId>
                <version>${keycloak-admin-client.version}</version>
            </dependency>

            <dependency>
                <groupId>org.mybatis.generator</groupId>
                <artifactId>mybatis-generator-core</artifactId>
                <version>${mybatis-generator-core.version}</version>
                <optional>true</optional>
            </dependency>

        </dependencies>
    </dependencyManagement>

    <dependencies>
        <!--These dependencies mostly all modules need-->
        <dependency>
            <groupId>com.progressive.minds.chimera</groupId>
            <artifactId>foundational.logging</artifactId>
            <version>1.0-SNAPSHOT</version>
        </dependency>
    </dependencies>
</project>